# vampireSurvivalCPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.txt  main.cpp
src/: CMakeLists.txt  main.cpp  main_test.cpp  movementComponent.cpp  movementComponent.hpp
src/components/: animationComponent.cpp  animationComponent.hpp  base.hpp  render.hpp
src/ecs/: component_manager.hpp  entity_manager.cpp  entity_manager.hpp  system_manager.cpp  system_manager.hpp  type.hpp
src/ecs/internal/: componentarray.inl
src/entities/: enemyEntity.cpp  enemyEntity.hpp  playerEntity.cpp  playerEntity.hpp
src/systems/: bullet_system.cpp  bullet_system.hpp  enemy_system.cpp  enemy_system.hpp  movementComponent.cpp  movementComponent.hpp  render_system.cpp  render_system.hpp  spawnComponent.cpp  spawnComponent.hpp
